# provcheck

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  WATERMARK_LICENSE_POLICY.md  signing.json.example
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  comfyui-node.yml  release.yml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
crates/provcheck/: Cargo.toml
crates/provcheck-attestation-spec/: Cargo.toml
crates/provcheck-attestation-spec/src/: lib.rs
crates/provcheck-audioseal/: Cargo.toml
crates/provcheck-audioseal/examples/: audioseal_detect_probe.rs  audioseal_embed_roundtrip.rs  tract_probe.rs
crates/provcheck-audioseal/models/: audioseal.meta.json
crates/provcheck-audioseal/src/: audio.rs  brand.rs  detect.rs  encode.rs  lib.rs  model.rs  registry.rs
crates/provcheck-cli/: Cargo.toml
crates/provcheck-cli/src/: main.rs
crates/provcheck-cli/tests/: exit_codes.rs
crates/provcheck-core/: Cargo.toml
crates/provcheck-core/src/: lib.rs  render.rs
crates/provcheck-core/tests/: integration.rs
crates/provcheck-detect/: Cargo.toml
crates/provcheck-detect/src/: lib.rs
crates/provcheck-examples/src/: main.rs
crates/provcheck-image/: Cargo.toml
crates/provcheck-image/examples/: image_roundtrip.rs
crates/provcheck-image/src/: bch.rs  encode.rs  image.rs  lib.rs  model.rs
crates/provcheck-kit/: Cargo.toml
crates/provcheck-kit/src/: main.rs  prompts.rs
crates/provcheck-kit/src/commands/: mod.rs
crates/provcheck-kit/tests/: smoke.rs
crates/provcheck-platform/: Cargo.toml
crates/provcheck-platform/src/: attestation.rs  lib.rs  network.rs  storage.rs
crates/provcheck-platform/tests/: attestation.rs
crates/provcheck-platform/tests/common/: mod.rs
crates/provcheck-publish/: Cargo.toml
crates/provcheck-publish/src/: lib.rs  records.rs  session.rs
crates/provcheck-sign/: Cargo.toml
crates/provcheck-sign/examples/: resign_dir.rs
crates/provcheck-sign/src/: backup.rs  cache.rs  cert.rs  lib.rs  persist.rs  sign.rs  types.rs
crates/provcheck-sign/src/providers/: age_file.rs  keychain.rs  mod.rs  yubikey.rs
crates/provcheck-stream-detect/: Cargo.toml
crates/provcheck-stream-detect/src/: lib.rs
crates/provcheck-synthid-text/: Cargo.toml
crates/provcheck-synthid-text/src/: lib.rs
crates/provcheck-video/: Cargo.toml
crates/provcheck-video/src/: lib.rs
crates/provcheck-watermark/: Cargo.toml
crates/provcheck-watermark/examples/: align_check.rs  decode_diff.rs  decode_dump.rs  decode_inspect.rs  decode_probe.rs  detect_profile.rs  embed_roundtrip.rs  memory_check.rs  nnef_validation.rs  windowed_validate.rs
crates/provcheck-watermark/models/: hparams.json  silentcipher-encoder.meta.json  silentcipher-encoder.onnx
crates/provcheck-watermark/src/: audio.rs  brand.rs  decode.rs  encode.rs  hparams.rs  lib.rs  model.rs  stft.rs
crates/provcheck-watermark/tests/: integration.rs
crates/provcheck-wavmark/: Cargo.toml
crates/provcheck-wavmark/examples/: wavmark_embed_roundtrip.rs
crates/provcheck-wavmark/models/: wavmark.meta.json
crates/provcheck-wavmark/src/: audio.rs  brand.rs  detect.rs  encode.rs  lib.rs  model.rs  registry.rs  stft.rs
crates/provcheck-weights/: Cargo.toml
crates/provcheck-weights/examples/: smoke.rs
crates/provcheck-weights/src/: cache.rs  download.rs  lib.rs  manifest.rs  verify.rs
crates/provcheck/src/: confidence.rs  lib.rs  report.rs  verification.rs
crates/provcheck/tests/: integration.rs  v1_release_docs.rs
crates/provcheck/tests/fixtures/: README.md
docs/: about.md  atproto-signing-key.md  brand-registry.md  creator-workflow.md  public-api-stability.md  release-process.md  sbom.md  semver-policy.md
docs/v0.3.3-detection-gap/: README.md  c2pa-mp3-followup.md  mp3-decoder-survey.md  python-dump-protocol.md
docs/v0.5.2-codec-survival/: README.md
docs/v0.6.0-roadmap/: README.md  p3-streaming-embed-design.md  p4-cuda-implementation-notes.md  p4-ort-cuda-backend-design.md
docs/v0.7.0-roadmap/: 7a-image-watermark-survey.md  README.md  primitives-audit.md
docs/v0.9-roadmap/: README.md
examples/: README.md  rAIdio.bot-sample.c2pa
lexicons/: README.md
lexicons/app/provcheck/: identity.json  signingKey.json
python/comfyui-node/: README.md  pyproject.toml
python/comfyui-node/provcheck_comfyui/: __init__.py  stamp_audio_node.py  stamp_node.py
python/comfyui-node/provcheck_comfyui/web/: provcheck.js
python/comfyui-node/tests/: test_stamp_audio_node.py  test_stamp_node.py
python/comfyui-node/workflows/: README.md  stamp_audio_minimal.json  stamp_image_minimal.json  stamp_signed_image.json
release-notes/v0.3.1/: commit.md  files.txt  tag.md
release-notes/v0.3.2/: commit.md  files.txt  tag.md
release-notes/v0.3.3/: commit.md  files.txt  tag.md
release-notes/v0.3.4/: commit.md  files.txt  tag.md
release-notes/v0.3.5/: commit.md  files.txt  tag.md
release-notes/v0.3.6/: commit.md  files.txt  tag.md
release-notes/v0.3.7/: commit.md  files.txt  tag.md
release-notes/v0.3.8/: commit.md  files.txt  tag.md
release-notes/v0.3.9/: commit.md  files.txt  tag.md
release-notes/v0.4.0/: commit.md  files.txt  tag.md
scripts/: README.md  audioseal-roundtrip-fixture.py  check-before-push.sh  diagnose-embed-mismatch.py  embed-silentcipher.py  export-audioseal.py  export-silentcipher-encoder.py  export-wavmark.py  generate-sbom.sh  parity-vs-upstream.py  publish-release.sh  publish_dc.sh  sign_release.ps1  v0.3.3-investigate.sh  v0.3.3-python-reference.py  v0.3.3-python-reference.requirements.txt
