# The Tauri app has its own release profile, own toolchain constraints,
# and own bundle targets — and Tauri's CLI expects to be invoked from
# `app/src-tauri/` as a top-level project root. Keeping it OUTSIDE the
# top-level Cargo workspace avoids churn in the main workspace on every
# frontend rebuild and simplifies the `cargo tauri build` flow.
[workspace]

[package]
name = "provcheck-app"
version = "0.9.35"
description = "Drag-drop GUI for provcheck — verify C2PA Content Credentials."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Creative Mayhem UG <info@rAIdio.bot>"]
publish = false

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# No feature flags — we don't serve file:// assets directly; the app
# invokes commands via IPC and the backend reads the path.
tauri = { version = "2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
provcheck = { path = "../../crates/provcheck" }
provcheck-platform = { path = "../../crates/provcheck-platform" }
provcheck-watermark = { path = "../../crates/provcheck-watermark" }
provcheck-audioseal = { path = "../../crates/provcheck-audioseal" }
provcheck-wavmark = { path = "../../crates/provcheck-wavmark" }

# Phase 9 — Sign tab. The GUI composes the same crates the kit
# binary does. We don't depend on provcheck-kit itself because
# it's a bin crate; the library layer is provcheck-sign +
# provcheck-publish + provcheck-attestation-spec.
provcheck-sign = { path = "../../crates/provcheck-sign" }
provcheck-publish = { path = "../../crates/provcheck-publish" }
provcheck-attestation-spec = { path = "../../crates/provcheck-attestation-spec" }
secrecy = "0.10"
time = { version = "0.3", features = ["formatting"] }

# v0.4.2: "Remember me" — stash the bsky app password in the OS
# keychain so the Sign tab can prefill the password field on
# subsequent logins. Distinct service namespace from
# provcheck-sign's "app.provcheck.kit" (signing-key custody) so
# password material and signing material never collide.
keyring = "3"

[[bin]]
name = "provcheck-app"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
