[package]
name = "provcheck-audioseal"
description = "AudioSeal neural-watermark detection for provcheck."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_audioseal"

[dependencies]
provcheck = { path = "../provcheck" }
provcheck-weights = { path = "../provcheck-weights" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# ONNX inference. AudioSeal ships as two ONNX models embedded into the
# library via include_bytes!() at build time, exported from Meta's
# MIT-licensed checkpoint (see scripts/export-audioseal.py).
tract-onnx = "0.21"

# Audio container decoding. Same pattern as provcheck-watermark, but
# resamples to 16 kHz (AudioSeal's training rate) rather than 44.1 kHz.
symphonia = { version = "0.6", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis", "wav"] }
rubato = "0.16"

# Parallel chunk inference for the detector (safe under the boundary
# L∞ measurement from the architecture survey).
rayon = "1"

# WAV output for the embed pipeline.
hound = "3"

[dev-dependencies]
tempfile = "3"
anyhow = "1"
