[package]
name = "provcheck-cli"
description = "Command-line C2PA Content Credentials verifier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "provcheck"
path = "src/main.rs"

[dependencies]
provcheck = { path = "../provcheck" }
provcheck-platform = { path = "../provcheck-platform" }
provcheck-watermark = { path = "../provcheck-watermark" }
provcheck-audioseal = { path = "../provcheck-audioseal" }
provcheck-wavmark = { path = "../provcheck-wavmark" }
provcheck-image = { path = "../provcheck-image" }
provcheck-video = { path = "../provcheck-video" }
provcheck-synthid-text = { path = "../provcheck-synthid-text" }
clap = { workspace = true }
