[package]
name = "provcheck-cli"
description = "Command-line C2PA Content Credentials verifier."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "provcheck"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
provcheck = { path = "../provcheck" }
provcheck-platform = { path = "../provcheck-platform" }
provcheck-watermark = { path = "../provcheck-watermark" }
provcheck-audioseal = { path = "../provcheck-audioseal" }
provcheck-wavmark = { path = "../provcheck-wavmark" }
provcheck-image = { path = "../provcheck-image" }
provcheck-video = { path = "../provcheck-video" }
provcheck-synthid-text = { path = "../provcheck-synthid-text" }

# v0.9.73: AI-content detection dispatch via `--detect ai` flag.
# The FOSS core ships the plumbing only; concrete detectors come
# from a paid DLC pack or operator-supplied open-source wrapper.
provcheck-detect = { path = "../provcheck-detect" }
clap = { workspace = true }
