[package]
name = "provcheck-core"
description = "Verify C2PA Content Credentials on any supported media file."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_core"

[dependencies]
# Inherit feature set from workspace (no default features,
# `rust_native_crypto` + `file_io`) so the build doesn't need OpenSSL.
c2pa.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Generate test certificates at test-run time — matches rAIdio.bot's
# per-install CA + EE pattern so fixtures reflect real-world use.
# `x509-parser` feature unlocks `Issuer::from_ca_cert_der` which lets
# us re-use the self-signed CA as an issuer for the end-entity cert
# (matches the rAIdio.bot signer.rs flow 1:1).
rcgen = { version = "0.14", features = ["x509-parser"] }
# Tiny WAV writer for synthesizing a silent test fixture (no audio
# content = no copyright question).
hound = "3"
tempfile = "3"
