[package]
name = "provcheck-image"
description = "Image-modality neural-watermark detection for provcheck (TrustMark scaffold; 7b wiring pending)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_image"

[dependencies]
# v0.7 phase 7a: scaffold only. The chosen first family is
# TrustMark (Adobe, MIT-licensed code + weights). The ONNX
# backend wires in at 7b; right now detect() pulls the weights
# via provcheck-weights (the DLC pattern, so v0.7 ships with a
# slim binary instead of bundled 60+ MB ONNX files via
# include_bytes!()) but the actual inference is still a stub
# until 7b-inference lands.
provcheck = { path = "../provcheck" }
provcheck-weights = { path = "../provcheck-weights" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Image container decoding. Mirrors symphonia's role on the audio
# side: get the bytes off disk into a normalised pixel array the
# rest of the pipeline consumes. The `image` crate covers PNG,
# JPEG, WebP, BMP, GIF, TIFF out of the box. AVIF and HEIC need
# additional decoder crates we defer to 7b based on what TrustMark
# can actually consume.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# v0.7 phase 7b: ONNX inference for TrustMark-B decoder. Same
# pattern as the audio crates — bytes come from the DLC weights
# cache, tract optimises + runs the model.
tract-onnx = "0.21"

[dev-dependencies]
tempfile = "3"
