[package]
name = "provcheck-image"
description = "Image-modality neural-watermark detection for provcheck (TrustMark-B via ort with BCH-5 ecosystem interop; full detect + embed)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_image"

[dependencies]
# TrustMark-B (Adobe, MIT-licensed code + weights), wired
# end-to-end via ort 2.x. Weights are pulled via
# provcheck-weights (the DLC delivery pattern, keeping the kit
# binary slim instead of include_bytes!()ing the 60+ MB ONNX).
provcheck = { path = "../provcheck" }
provcheck-weights = { path = "../provcheck-weights" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Image container decoding. Mirrors symphonia's role on the audio
# side: get the bytes off disk into a normalised pixel array the
# rest of the pipeline consumes. The `image` crate covers PNG,
# JPEG, WebP, BMP, GIF, TIFF out of the box. AVIF and HEIC need
# additional decoder crates we defer to 7b based on what TrustMark
# can actually consume.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# v0.7 phase 7b-followup: ONNX inference for TrustMark-B decoder
# via ort 2.x. tract 0.21's ONNX op coverage cannot run Adobe's
# decoder export (Gemm + Resize attribute combinations declined);
# ort has full coverage. We use `download-binaries` so the CPU
# ORT runtime is bundled into the binary at build time — no
# operator install required, "always respect the user". The
# silentcipher --features cuda path uses ort too but with
# load-dynamic + CUDA EP; the image path's default is CPU +
# bundled binaries.
ort = { version = "2.0.0-rc.4", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
# ndarray for the input tensor construction. Behind a normal
# dep here (the CUDA silentcipher build also has it but
# feature-gated).
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"
