[package]
name = "provcheck-kit"
description = "Artist-side CLI for provcheck: cert generation, C2PA signing, atproto attestation publishing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "provcheck-kit"
path = "src/main.rs"

[features]
default = []
# v0.6.0 P4: propagate the `cuda` feature into the watermark crate
# so building `cargo build --release --features cuda -p provcheck-kit`
# produces a CUDA-enabled kit binary. The default download stays
# tract-only CPU.
cuda = ["provcheck-watermark/cuda"]

[dependencies]
# The sibling crates this CLI composes.
provcheck-sign = { path = "../provcheck-sign" }
provcheck-publish = { path = "../provcheck-publish" }
provcheck-attestation-spec = { path = "../provcheck-attestation-spec" }
# v0.3.8: the watermark crate's `encode` module + `audio` decoder, used
# by the `kit watermark` subcommand to re-stamp ffmpeg-normalised mixes.
provcheck-watermark = { path = "../provcheck-watermark" }
provcheck-weights = { path = "../provcheck-weights" }
# v0.4.0: second watermark family. Adds `kit watermark --kind audioseal`.
provcheck-audioseal = { path = "../provcheck-audioseal" }

# v0.5.0: kit sign now consumes Box<dyn c2pa::Signer> directly via
# provider.signer() so the HSM-backed Yubikey path skips the
# PEM-extraction step the software backends still use internally.
c2pa.workspace = true
# v0.4.1: third watermark family. Adds `kit watermark --kind wavmark`.
provcheck-wavmark = { path = "../provcheck-wavmark" }

# WAV output for the watermark subcommand. Tiny dep (~150 LOC), no
# additional MP3/AAC encoder — re-encode the output WAV externally
# via ffmpeg if a compressed format is needed.
hound = "3"

# CLI plumbing
clap = { workspace = true }
anyhow = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Async runtime — provcheck-publish is async. `rt` (single-thread)
# is plenty for the kit's single-flow CLI shape.
tokio = { version = "1", features = ["rt", "macros"] }

# Secret-input prompts. The CLI's only contact with key material is
# through these.
rpassword = "7"
secrecy = "0.10"

# Time formatting for recovery-recipient `added_at` stamping and
# the `validUntil = now()` revocation flow.
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
# End-to-end smoke test exercises the full producer→verifier loop
# using the in-process library APIs (bypassing rpassword prompts
# that can't be driven from a test). Pulls in provcheck for the
# verifier side and tempfile/hound for fixture generation.
provcheck = { path = "../provcheck" }
provcheck-sign = { path = "../provcheck-sign" }
provcheck-attestation-spec = { path = "../provcheck-attestation-spec" }
secrecy = "0.10"
tempfile = "3"
hound = "3"
