[package]
name = "provcheck-sign"
description = "Cert generation, key custody, and C2PA signing for provcheck-kit. Pure-Rust, sync. Owns every secret a creator has on disk."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_sign"

[dependencies]
provcheck-attestation-spec = { path = "../provcheck-attestation-spec" }

# C2PA signing primitive. Pulls from workspace pin (rust_native_crypto,
# no OpenSSL build dep).
c2pa.workspace = true

# Workspace-pinned
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Cert generation — same rcgen pin as rAIdio.bot ships
# (the lifted code in src/cert.rs was tested against this exact
# version). x509-parser feature unlocks Issuer::from_ca_cert_der.
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }

# Fingerprint computation lives in the spec crate; the sha2 dep here
# is for any future cert-internal hashing we add (e.g. SPKI hashes).
# Keep the pin in sync with the spec crate.
sha2 = "0.10"

# Platform-aware data-directory resolution. XDG_DATA_HOME on
# Linux/macOS; %APPDATA% on Windows.
dirs = "5"

# Timestamp handling for identity.json's created_at field.
time = { version = "0.3", features = ["parsing", "formatting", "serde", "macros"] }

# Key custody — common to all backends.
secrecy = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
# OS keychain abstraction: macOS Keychain Services, Windows
# Credential Manager, Linux Secret Service.
#
# keyring 3 ships zero default features — platform-native backends
# are opt-in. We enable all three per-OS native paths so the same
# Cargo.toml works on every target; the per-target cfg in
# keyring's own Cargo.toml means only the right deps get pulled in
# for each build. `crypto-rust` keeps the Linux secret-service path
# off of system OpenSSL (we want pure-Rust everywhere).
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }

# AgeFileProvider: at-rest encryption via the age format. age does
# the actual crypto (scrypt for the passphrase recipient stanza,
# X25519+ECDH for the recovery-recipient stanzas, ChaCha20-Poly1305
# STREAM for the payload). Recipient-set semantics and the
# documented retroactive-revocation footgun are in architectural
# decision #5 of the plan.
age = "0.11"

# YubikeyProvider: PIV-slot key custody. The private key is generated
# on-device and never extractable; signatures happen on the token.
# yubikey 0.8 is BSD-2-Clause (FOSS-clean). PC/SC access is provided
# by the OS on macOS + Windows; Linux hosts need libpcsclite1 at
# runtime (apt: libpcsclite-dev for build, libpcsclite1 for run).
yubikey = "0.8"

# p256 is used for the DER → P1363 conversion path inside the
# Yubikey backend: `piv::sign_data` returns an ECDSA signature in
# ASN.1 DER `SEQUENCE { r, s }`, but COSE ES256 (what c2pa-rs
# expects) wants the raw P1363 64-byte concatenation. The p256 crate
# already speaks both formats. Apache-2.0 / MIT.
p256 = { version = "0.13", features = ["ecdsa"] }

# pem-parse the persisted chain inside YubikeySigner::certs() so we
# can hand DER blobs to c2pa. (Was previously a dev-dep only; now a
# runtime dep on the Yubikey signing path.)
pem = "3"

# x509-cert is what `yubikey::piv::generate` returns its
# SubjectPublicKeyInfoOwned through. We re-encode to DER bytes via
# the `der` feature's Encode trait to hand off to rcgen.
x509-cert = "0.2"

[dev-dependencies]
# Round-trip tests: re-read the rcgen output via x509-parser to
# confirm the cert chain decodes cleanly and contains what we set.
x509-parser = "0.16"
# Extracting DER bytes out of the PEM chain in tests. Production
# code uses the spec crate's fingerprint helpers and doesn't need
# to touch the pem crate directly.
pem = "3"
# Filesystem isolation for the persist-layer tests.
tempfile = "3"
# Synthetic silent WAVs for the c2pa signing tests. No copyrighted
# audio needed, and the format is recognised by c2pa's signer.
hound = "3"
