[package]
name = "provcheck-synthid-text"
description = "Google SynthID-text detection for provcheck (v0.7 phase 7e scaffold)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_synthid_text"

[dependencies]
provcheck = { path = "../provcheck" }
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
