[package]
name = "provcheck-watermark"
description = "Neural-watermark detection for provcheck (silentcipher)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_watermark"

[dependencies]
provcheck = { path = "../provcheck" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Pure-Rust ONNX inference. The decoder model lives at
# models/silentcipher-decoder.onnx and is embedded into the
# library via include_bytes!() at build time so there's nothing
# to load at runtime.
tract-onnx = "0.21"
# NNEF format support — used to load a pre-optimised version of the
# silentcipher decoder so tract's graph optimiser doesn't have to
# run on every cold process start. The model itself is committed
# at models/silentcipher-decoder.nnef.tgz; see examples/nnef-bake.rs
# for the one-shot conversion tool.
tract-nnef = { version = "0.21", features = ["flate2"] }

# Audio container decoding. Default features cover the common
# containers; we add `mp3` explicitly because it's behind a
# feature gate in symphonia's bundled licence model.
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis", "wav"] }

# Sample-rate conversion to 44.1 kHz when the input isn't
# already there. SincFixedIn matches what librosa would do
# inside Python silentcipher — bit-exact match isn't possible
# (we're not using librosa), but the detector is robust enough
# that the small numerical drift doesn't show up in confidence.
rubato = "0.16"

# Real-input FFT for the STFT front-end. Built on rustfft;
# avoids the complex-input round-trip we don't need.
realfft = "3"

[dev-dependencies]
tempfile = "3"
# Tiny WAV writer for synthesising unmarked-control test
# fixtures at test time. Avoids committing binary fixtures
# to the repo and keeps the negative-control deterministic.
hound = "3"
# Examples use anyhow's "?" idiom; not pulled in by the lib.
anyhow = "1"
