[package]
name = "provcheck-watermark"
description = "Neural-watermark detection for provcheck (silentcipher)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_watermark"

[features]
default = []
# v0.6.0 P4: optional CUDA-backed inference via ort
# (onnxruntime-rs). When `cuda` is enabled the embed pipeline
# routes the encoder ONNX call through ort with the CUDA
# execution provider instead of tract-onnx. Requires the
# onnxruntime CUDA shared libraries installed on the host at
# runtime (see docs/v0.6.0-roadmap/p4-ort-cuda-backend-design.md).
# Build with `cargo build --release --features cuda` and produce
# a `provcheck-kit-cuda` target separate from the default
# tract-only kit binary.
cuda = ["dep:ort", "dep:ndarray"]

[dependencies]
provcheck = { path = "../provcheck" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Pure-Rust ONNX inference. The decoder model lives at
# models/silentcipher-decoder.onnx and is embedded into the
# library via include_bytes!() at build time so there's nothing
# to load at runtime.
tract-onnx = "0.21"

# Optional GPU-accelerated inference via onnxruntime, behind
# the `cuda` feature flag. Same ONNX model files. The default
# CPU build does not pull this in.
ort = { version = "2.0.0-rc.4", optional = true, default-features = false, features = ["std", "ndarray", "cuda", "load-dynamic"] }
# ndarray for the ort path's input tensor construction. Behind
# the cuda feature so we don't pull it into the default CPU build.
ndarray = { version = "0.16", optional = true }
# NNEF format support — used to load a pre-optimised version of the
# silentcipher decoder so tract's graph optimiser doesn't have to
# run on every cold process start. The model itself is committed
# at models/silentcipher-decoder.nnef.tgz; see examples/nnef-bake.rs
# for the one-shot conversion tool.
tract-nnef = { version = "0.21", features = ["flate2"] }

# Audio container decoding. Default features cover the common
# containers; we add `mp3` explicitly because it's behind a
# feature gate in symphonia's bundled licence model.
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg", "vorbis", "wav"] }

# Sample-rate conversion to 44.1 kHz when the input isn't
# already there. SincFixedIn matches what librosa would do
# inside Python silentcipher — bit-exact match isn't possible
# (we're not using librosa), but the detector is robust enough
# that the small numerical drift doesn't show up in confidence.
rubato = "0.16"

# Real-input FFT for the STFT front-end. Built on rustfft;
# avoids the complex-input round-trip we don't need.
realfft = "3"

# Tiny WAV writer + reader. Used in `encode` to emit watermarked WAV
# output (the producer-side embedding pipeline), and in tests for
# synthesising deterministic fixtures.
hound = "3"

# Parallel chunk inference for the detector. Each chunk runs tract
# independently; with ~1.5 GB per chunk and a default fan-out of
# min(available_parallelism/2, 4) we stay well under typical
# container memory ceilings while extracting 2-4x speedup on
# multi-core hosts.
rayon = "1"

[dev-dependencies]
tempfile = "3"
# Examples use anyhow's "?" idiom; not pulled in by the lib.
anyhow = "1"
