[package]
name = "provcheck-wavmark"
description = "WavMark neural-watermark detection for provcheck."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "provcheck_wavmark"

[dependencies]
provcheck = { path = "../provcheck" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# NOTE: this crate is currently a scaffold. License check is
# complete (both code and weights are MIT). Detection pipeline
# is not yet ported. When ported it will take the same
# dependency set as `provcheck-watermark`: tract-onnx,
# symphonia, rubato, realfft. See lib.rs for the integration
# checklist.

[dev-dependencies]
tempfile = "3"
